@@ -1423,7 +1423,24 @@ multibuild-linux-powerpc: \
 multibuild-linux-s390: multibuild-porting32-gcc # TODO
 
 # Linux/sparc64 with 32-bit ABI
-multibuild-linux-sparc: multibuild-porting32-gcc # TODO
+multibuild-linux-sparc: \
+  build-porting32-gcc-portability \
+  build-porting32-gcc-safety3 \
+  build-porting32-gcc-heapcodes \
+  build-porting32-gcc-one_free_bit_heapcodes-malloc \
+  build-porting32-gcc-one_free_bit_heapcodes-trivialmap \
+  build-porting32-gcc-heapcodes-spvw_pages \
+  build-porting32-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting32-gcc-wide \
+  build-porting32-gcc-limited_memory \
+  build-porting32-gcc-old_gc \
+  build-porting32-gcc-multithread_gc \
+  build-porting32-gcc-generational_gc-old_gc \
+  build-porting32-gcc-generational_gc-multithread_gc \
+  build-porting32-gcc-safety0 \
+  build-porting32-gcc-safety0-optimized \
+  build-porting32-gcc-debug_gcsafety \
+  build-porting32-gcc-debug_ari_asm
 
 # Hurd/i386
 multibuild-hurd-i386: multibuild-porting32-gcc # TODO
