@@ -1,5 +1,13 @@
 2018-01-11  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on Linux/sparc.
+	* Makefile.devel (multibuild-linux-sparc): Enable all build variants
+	that work.
+	* makemake.in (XCFLAGS): For Linux/sparc, enable all optimizations
+	except ASM.
+
+2018-01-11  Bruno Haible  <bruno@clisp.org>
+
 	Enable most optimizations on Linux/powerpc64le.
 	* Makefile.devel (multibuild-linux-powerpc64le): Enable all build
 	variants.
